--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Biol 607: Intro to Computational Data Analysis for Biology</title>
+<title>Biol 609: Advanced Data Analysis for Biology</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -211,7 +211,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Biol 607: Intro to Computational Data Analysis for Biology</h1>
+<h1 class="title toc-ignore">Biol 609: Advanced Data Analysis for Biology</h1>
 
 </div>
 
