--- a/schedule.html
+++ b/schedule.html
@@ -219,8 +219,10 @@ $(document).ready(function () {
 <p>While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques.</p>
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
-<p><strong>Lecture:</strong> <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a><br />
-<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-intro" class="uri">https://etherpad.wikimedia.org/p/609-intro</a></p>
+<p><strong>Lecture:</strong> <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_generalized_linear_models.html">GLM Review</a><br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-intro" class="uri">https://etherpad.wikimedia.org/p/609-intro</a><br />
+<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/readings/O&#39;Hara_2009_glmm.pdf">O’Hara 2009</a> through section on GLMs, <a href="http://byrneslab.net/classes/biol609/readings/o&#39;hara_and_kotze_do_not_log_transform.pdf">O’Hara and Kotze 2010</a>, <a href="http://byrneslab.net/classes/biol609/readings/Wharton_Hui_2011_Ecology.pdf">Wharton and Hui 2011</a>, <a href="http://byrneslab.net/classes/biol609/readings/Ver_Hoef_and_Boveng_qp_neg%20binomial.pdf">ver Hoef and Boveng 2007 on overdispersion</a>, <a href="https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html">Hartig DHARMa vignette</a><br />
+<strong>Files:</strong> <a href="lectures/02_data.zip">Data for GLM Lecture</a></p>
 </div>
 
 
