--- a/schedule.html
+++ b/schedule.html
@@ -216,7 +216,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques.</p>
+<p>While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques. Each topic will have accompanying readings highlighting a general introduction to a technique (required), and one or more general references or examples. For access to blocked readings, biol609.</p>
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
 <p><strong>Lecture:</strong> <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_generalized_linear_models.html">GLM Review</a><br />
@@ -226,10 +226,10 @@ $(document).ready(function () {
 </div>
 <div id="week-2." class="section level3">
 <h3>Week 2.</h3>
-<p><strong>Lecture:</strong> Model II and Quantile Regression, Robust Regression and Generalised Least Squares<br />
+<p><strong>Lecture:</strong> <a href="./lectures/03_rma_quantile.html">Model II and Quantile Regression</a>, Robust Regression and Generalised Least Squares<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-alt_regression" class="uri">https://etherpad.wikimedia.org/p/609-alt_regression</a><br />
 <strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/readings/Warton_et_al_2012_MEE.pdf">Warton et al. SMATR</a>, <a href="http://byrneslab.net/classes/biol609/readings/Warton_et_al-2006-Biological_Reviews.pdf">Warton et al. 2006 Model II Review</a>, <a href="http://byrneslab.net/classes/biol609/readings/Cade_and_Noon_2003_Quantile.pdf">Cade and Noon 2003 on Quantile Regression</a>, <a href="http://byrneslab.net/classes/biol609/readings/Brennen_et_al_2015_quantile.pdf">Brennen et al. 2015 quantile regression example</a><br />
-<strong>Files:</strong></p>
+<strong>Files:</strong> <a href="./lectures/data/03/ekk_from_dryad.csv">Elk data</a></p>
 </div>
 
 
