--- a/schedule.html
+++ b/schedule.html
@@ -221,14 +221,14 @@ $(document).ready(function () {
 <h3>Week 1.</h3>
 <p><strong>Lecture:</strong> <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_generalized_linear_models.html">GLM Review</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-intro" class="uri">https://etherpad.wikimedia.org/p/609-intro</a><br />
-<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/readings/O&#39;Hara_2009_glmm.pdf">O’Hara 2009</a> through section on GLMs, <a href="http://byrneslab.net/classes/biol609/readings/o&#39;hara_and_kotze_do_not_log_transform.pdf">O’Hara and Kotze 2010</a>, <a href="http://byrneslab.net/classes/biol609/readings/Wharton_Hui_2011_Ecology.pdf">Wharton and Hui 2011</a>, <a href="http://byrneslab.net/classes/biol609/readings/Ver_Hoef_and_Boveng_qp_neg%20binomial.pdf">ver Hoef and Boveng 2007 on overdispersion</a>, <a href="https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html">Hartig DHARMa vignette</a><br />
+<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/O&#39;Hara_2009_glmm.pdf">O’Hara 2009</a> through section on GLMs, <a href="http://byrneslab.net/classes/biol609/o&#39;hara_and_kotze_do_not_log_transform.pdf">O’Hara and Kotze 2010</a>, <a href="http://byrneslab.net/classes/biol609/Wharton_Hui_2011_Ecology.pdf">Wharton and Hui 2011</a>, <a href="http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg%20binomial.pdf">ver Hoef and Boveng 2007 on overdispersion</a>, <a href="https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html">Hartig DHARMa vignette</a><br />
 <strong>Files:</strong> <a href="lectures/02_data.zip">Data for GLM Lecture</a></p>
 </div>
 <div id="week-2." class="section level3">
 <h3>Week 2.</h3>
 <p><strong>Lecture:</strong> <a href="./lectures/03_rma_quantile.html">Model II and Quantile Regression</a>, Robust Regression and Generalised Least Squares<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-alt_regression" class="uri">https://etherpad.wikimedia.org/p/609-alt_regression</a><br />
-<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/readings/Warton_et_al_2012_MEE.pdf">Warton et al. SMATR</a>, <a href="http://byrneslab.net/classes/biol609/readings/Warton_et_al-2006-Biological_Reviews.pdf">Warton et al. 2006 Model II Review</a>, <a href="http://byrneslab.net/classes/biol609/readings/Cade_and_Noon_2003_Quantile.pdf">Cade and Noon 2003 on Quantile Regression</a>, <a href="http://byrneslab.net/classes/biol609/readings/Brennen_et_al_2015_quantile.pdf">Brennen et al. 2015 quantile regression example</a><br />
+<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf">Warton et al. SMATR</a>, <a href="http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf">Warton et al. 2006 Model II Review</a>, <a href="http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf">Cade and Noon 2003 on Quantile Regression</a>, <a href="http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf">Brennen et al. 2015 quantile regression example</a><br />
 <strong>Files:</strong> <a href="./lectures/data/03/ekk_from_dryad.csv">Elk data</a></p>
 </div>
 
