--- a/schedule.html
+++ b/schedule.html
@@ -218,7 +218,7 @@ $(document).ready(function () {
 
 <p>While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques. Each topic will have accompanying readings highlighting a general introduction to a technique (required), and one or more general references or examples. For access to blocked readings, biol609.<br />
 <br />
-To see the code of a lecture, load the slides, then change the file extension in your browser bar to .Rmd to get the code. Or go to <a href="http://github.com/biol609/biol609.github.io/lectures" class="uri">http://github.com/biol609/biol609.github.io/lectures</a> for all of the code.</p>
+To see the code of a lecture, load the slides, then change the file extension in your browser bar to .Rmd to get the code. Or go to <a href="https://github.com/biol609/biol609.github.io/tree/master/lectures">this link</a> for all of the code.</p>
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
 <p><strong>Lecture:</strong> <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_generalized_linear_models.html">GLM Review</a><br />
