--- a/schedule.html
+++ b/schedule.html
@@ -228,9 +228,9 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-2." class="section level3">
 <h3>Week 2.</h3>
-<p><strong>Lecture:</strong> <a href="./lectures/03_rma_quantile.html">Model II and Quantile Regression</a>, <a href="./lectures/04_gls.html">Robust Regression and Generalised Least Squares</a><br />
+<p><strong>Lecture:</strong> <a href="./lectures/03_rma_quantile.html">Model II and Quantile Regression</a>, <a href="./lectures/04_gls.html">Generalised Least Squares</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-alt_regression" class="uri">https://etherpad.wikimedia.org/p/609-alt_regression</a><br />
-<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf">Warton et al. SMATR</a>, <a href="http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf">Warton et al. 2006 Model II Review</a>, <a href="http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf">Cade and Noon 2003 on Quantile Regression</a>, <a href="http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf">Brennen et al. 2015 quantile regression example</a><br />
+<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf">Warton et al. SMATR</a>, <a href="http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf">Warton et al. 2006 Model II Review</a>, <a href="http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf">Cade and Noon 2003 on Quantile Regression</a>, <a href="http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf">Brennen et al. 2015 quantile regression example</a>, <a href="https://bookdown.org/ccolonescu/RPoE4/heteroskedasticity.html">Colonescu Ch. 8 on Heteroskedasticity</a><br />
 <strong>Files:</strong> <a href="./lectures/data/03/ekk_from_dryad.csv">Elk data</a>, <a href="./lectures/data/04/Clams.txt">Clam data</a></p>
 </div>
 
