--- a/lectures/05_timeseries.html
+++ b/lectures/05_timeseries.html
@@ -717,8 +717,11 @@ allSites +
 <h1>Exercise: Model CHLFa in the Plankton Data Set</h1>
 <p><img src="05_timeseries_files/figure-revealjs/plankton_plot-1.jpeg" width="672" /></p>
 <p>How well can you model the time series with the measurements at hand?<br />
-Data extrapolated from Zuur et al. 2009<br />
-## Exercise: Model CHLFa in the Plankton Data Set Suggested Order:</p>
+Data extrapolated from Zuur et al. 2009</p>
+</section>
+<section id="exercise-model-chlfa-in-the-plankton-data-set-1" class="slide level2">
+<h1>Exercise: Model CHLFa in the Plankton Data Set</h1>
+<p>Suggested Order:</p>
 <ol type="1">
 <li>Select one site, evaluate trend with and without correlaiton<br />
 <br />
