fixed latex error

--- a/lectures/07_random_effects.html
+++ b/lectures/07_random_effects.html
@@ -270,7 +270,7 @@ A nice normal distribution
 <div class="fragment">
 <p><span id="left">Random:</span><br />
 <span class="math display">\[Y_{ij} =  \beta_{j} + \epsilon_i\]</span><br />
-<span class="math display">\[\beta_{j} \sim \mathcal(N)(\beta, \sigma^2_{site})\]</span><br />
+<span class="math display">\[\beta_{j} \sim \mathcal{N}(\beta, \sigma^2_{site})\]</span><br />
 <span class="math display">\[\epsilon \sim \mathcal{N}(0, \sigma^2)\]</span></p>
 </div>
 </section>
@@ -298,13 +298,13 @@ A nice normal distribution
 <section id="consider-what-random-effects-mean---1-model-2-ways" class="slide level2">
 <h1>Consider what random effects mean - 1 model, 2 ways</h1>
 <span class="math display">\[Y_{ij} =  \beta_{j} + \epsilon_i\]</span><br />
-<span class="math display">\[\beta_{j} \sim \mathcal(N)(\alpha, \sigma^2_{site})\]</span><br />
+<span class="math display">\[\beta_{j} \sim \mathcal{N}(\alpha, \sigma^2_{site})\]</span><br />
 <span class="math display">\[\epsilon \sim \mathcal{N}(0, \sigma^2)\]</span><br />
 <br />
 
 <div class="fragment">
 <p><span class="math display">\[Y_{ij} =  \alpha + \beta_{j} + \epsilon_i\]</span><br />
-<span class="math display">\[\beta_{j} \sim \mathcal(N)(0, \sigma^2_{site})\]</span><br />
+<span class="math display">\[\beta_{j} \sim \mathcal{N}(0, \sigma^2_{site})\]</span><br />
 <span class="math display">\[\epsilon \sim \mathcal{N}(0, \sigma^2)\]</span></p>
 </div>
 </section>
