--- a/lectures/07_random_effects.html
+++ b/lectures/07_random_effects.html
@@ -429,7 +429,7 @@ Estimating Random Effects
 <h1>In R….</h1>
 <br />
 <br />
-<img src="./images/07/lmer_lemur_tim_doherty.jpg" />
+<img src="images/07/lmer_lemur_tim_doherty.jpg" />
 <div style="text-align:left">
 Thank you Tim Doherty
 </div>
