--- a/schedule.html
+++ b/schedule.html
@@ -254,7 +254,8 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-5." class="section level3">
 <h3>Week 5.</h3>
-<p><strong>Lecture:</strong> Intro to Structural Equation Models</p>
+<p><strong>Lecture:</strong> <a href="https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw">Intro to Structural Equation Models</a><br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-sem" class="uri">https://etherpad.wikimedia.org/p/609-sem</a></p>
 </div>
 <div id="week-6." class="section level3">
 <h3>Week 6.</h3>
