--- a/schedule.html
+++ b/schedule.html
@@ -254,7 +254,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-5." class="section level3">
 <h3>Week 5.</h3>
-<p><strong>Lecture:</strong> <a href="https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw">Intro to Structural Equation Models</a><br />
+<p><strong>Lecture:</strong> <a href="https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw">Intro to Structural Equation Models</a>, <a href="https://1drv.ms/f/s!AvOIsObbweOroNIitg7KpsLhgffJrw">Implementing Piecewise SEM</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-sem" class="uri">https://etherpad.wikimedia.org/p/609-sem</a><br />
 <strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Grace_et_al-2012-Ecosphere.pdf">Grace et al 2012 Ecosphere</a><br />
 <strong>R packages:</strong> piecewiseSEM</p>
