--- a/schedule.html
+++ b/schedule.html
@@ -261,7 +261,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-6." class="section level3">
 <h3>Week 6.</h3>
-<p><strong>Lecture</strong>: <a href="./lectures/11_bayes_reintro.html">Re-Introduction to Bayesian Logic</a> and Sampling<br />
+<p><strong>Lecture</strong>: <a href="./lectures/11_bayes_reintro.html">Re-Introduction to Bayesian Logic</a> and <a href="./lectures/12_posterior_sampling.html">Sampling</a><br />
 <strong>Reading:</strong> McElreath Ch. 1-3<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-bayes" class="uri">https://etherpad.wikimedia.org/p/609-bayes</a></p>
 </div>
