--- a/schedule.html
+++ b/schedule.html
@@ -267,7 +267,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-7." class="section level3">
 <h3>Week 7.</h3>
-<p><strong>Lecture:</strong> <a href="./lectures/13_linear_models.html">Linear Bayesian Models</a><br />
+<p><strong>Lecture:</strong> <a href="./lectures/13_linear_models.html">Linear Bayesian Models</a>, <a href="./lectures/14_multiple_predictors.html">Multiple Predictor Variables (including Categoricals)</a><br />
 <strong>Reading:</strong> McElreath Chapter 4-5<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-linreg" class="uri">https://etherpad.wikimedia.org/p/609-linreg</a></p>
 </div>
