--- a/lectures/15_mmi.html
+++ b/lectures/15_mmi.html
@@ -324,9 +324,11 @@ Deviance: 8.526583810^{4}</p>
 <section id="dic" class="slide level2">
 <h1>DIC</h1>
 <p><img src="images/15/Sir-David-Spiegelhalter_I0A0548.jpg" /><br />
-<span class="math display">\[DIC = 2 \bar{D} - 2 p_D\]</span><br />
-<br />
-## DIC <span class="math display">\[DIC = 2 \bar{D} - 2 p_D\]</span></p>
+<span class="math display">\[DIC = 2 \bar{D} - 2 p_D\]</span></p>
+</section>
+<section id="dic-1" class="slide level2">
+<h1>DIC</h1>
+<p><span class="math display">\[DIC = 2 \bar{D} - 2 p_D\]</span></p>
 <ul>
 <li>Works well for multivariate normal posteriors<br />
 </li>
