--- a/schedule.html
+++ b/schedule.html
@@ -273,7 +273,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-8." class="section level3">
 <h3>Week 8.</h3>
-<p><strong>Lecture:</strong> <a href="./lectures/15_mmi.html">Bayesian Multimodel Inference</a><br />
+<p><strong>Lecture:</strong> <a href="./lectures/15_mmi.html">Bayesian Multimodel Inference</a>, <a href="./lectures/16_interactions.html">Interaction Effects</a><br />
 <strong>Reading:</strong> McElreath Chapter 6-7<br />
 <strong>Additional Reading:</strong> <a href="http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf">Aho et al 2013 Ecology</a>, <a href="http://link.springer.com/article/10.1007/s11222-013-9416-2">Gelman et al. 2013 on WAIC and LOO</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mmi" class="uri">https://etherpad.wikimedia.org/p/609-mmi</a></p>
