--- a/schedule.html
+++ b/schedule.html
@@ -280,8 +280,9 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-9." class="section level3">
 <h3>Week 9.</h3>
-<p><strong>Lecture:</strong> Markov Chain Monte-Carlo Approaches<br />
-<strong>Reading:</strong> McElreath Chapter 8</p>
+<p><strong>Lecture:</strong> <a href="./lectures/17_mcmc.html">Markov Chain Monte-Carlo Approaches</a><br />
+<strong>Reading:</strong> McElreath Chapter 8,9<br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mcmc_entropy" class="uri">https://etherpad.wikimedia.org/p/609-mcmc_entropy</a></p>
 </div>
 <div id="week-10." class="section level3">
 <h3>Week 10.</h3>
