--- a/schedule.html
+++ b/schedule.html
@@ -286,7 +286,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-10." class="section level3">
 <h3>Week 10.</h3>
-<p><strong>Lecture</strong>: Generalized Linear Models in a Bayesian Framework<br />
+<p><strong>Lecture</strong>: <a href="./lectures/18_maxent_glm.html">MaxEnt and GLMs</a>, Generalized Linear Models in a Bayesian Framework<br />
 <strong>Reading:</strong> McElreath Chapter 9-10</p>
 </div>
 <div id="week-11." class="section level3">
