--- a/schedule.html
+++ b/schedule.html
@@ -291,13 +291,14 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-11." class="section level3">
 <h3>Week 11.</h3>
-<p><strong>Lecture:</strong> Overdispersed and Mixture Models<br />
-<strong>Reading:</strong> McElreath Chapter 11</p>
+<p><strong>Lecture:</strong> <a href="./lectures/20_zinfl.Rmd">Gamma and Zero Inflated Models</a>, Overdispersed Mixture Models<br />
+<strong>Reading:</strong> McElreath Chapter 11<br />
+<strong>Files:</strong> <a href="./lectures/data/20/fishing_duration.csv">Fishing Duration CSV</a></p>
 </div>
 <div id="week-12." class="section level3">
 <h3>Week 12.</h3>
 <p><strong>Lecture:</strong> Mixed Models in a Bayesian Context<br />
-<strong>Reading:</strong> McElreath Chapter 11</p>
+<strong>Reading:</strong> McElreath Chapter 12</p>
 </div>
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
