--- a/schedule.html
+++ b/schedule.html
@@ -293,7 +293,8 @@ To see the code of a lecture, load the slides, then change the file extension in
 <h3>Week 11.</h3>
 <p><strong>Lecture:</strong> <a href="./lectures/20_zinfl.Rmd">Gamma and Zero Inflated Models</a>, Overdispersed Mixture Models<br />
 <strong>Reading:</strong> McElreath Chapter 11<br />
-<strong>Files:</strong> <a href="./lectures/data/20/fishing_duration.csv">Fishing Duration CSV</a></p>
+<strong>Files:</strong> <a href="./lectures/data/20/fishing_duration.csv">Fishing Duration CSV</a><br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-zig_zag" class="uri">https://etherpad.wikimedia.org/p/609-zig_zag</a></p>
 </div>
 <div id="week-12." class="section level3">
 <h3>Week 12.</h3>
