--- a/schedule.html
+++ b/schedule.html
@@ -298,8 +298,9 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-12." class="section level3">
 <h3>Week 12.</h3>
-<p><strong>Lecture:</strong> <a href="./lectures/22_varying_intercept.html">Varying Intercept Mixed Models</a> in a Bayesian Context<br />
-<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mixed_bayesian" class="uri">https://etherpad.wikimedia.org/p/609-mixed_bayesian</a> <strong>Reading:</strong> McElreath Chapter 12</p>
+<p><strong>Lecture:</strong> <a href="./lectures/22_varying_intercept.html">Varying Intercept Mixed Models</a> in a Bayesian Context, <a href="./lectures/23a_varslope.html">Varying Slope Models</a>, <a href="./lectures/23b_prediction.html">Prediction with Mixed Models</a><br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mixed_bayesian" class="uri">https://etherpad.wikimedia.org/p/609-mixed_bayesian</a><br />
+<strong>Reading:</strong> McElreath Chapter 12</p>
 </div>
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
