--- a/schedule.html
+++ b/schedule.html
@@ -300,12 +300,13 @@ To see the code of a lecture, load the slides, then change the file extension in
 <h3>Week 12.</h3>
 <p><strong>Lecture:</strong> <a href="./lectures/22_varying_intercept.html">Varying Intercept Mixed Models</a> in a Bayesian Context, <a href="./lectures/23a_varslope.html">Varying Slope Models</a>, <a href="./lectures/23b_prediction.html">Prediction with Mixed Models</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mixed_bayesian" class="uri">https://etherpad.wikimedia.org/p/609-mixed_bayesian</a><br />
-<strong>Reading:</strong> McElreath Chapter 12</p>
+<strong>Reading:</strong> McElreath Chapter 12, 13<br />
+<strong>Additional Reading:</strong> <a href="http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf">Gelman and Hill Ch. 12</a> (see the bit on one model written 5 ways), <a href="http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf">Gelman and Hill Ch. 13</a>, <a href="http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf">Gelman on multiple comparisons in mixed models</a></p>
 </div>
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
-<p><strong>Lecture:</strong> Revisiting Autocorrelation and Missing Data<br />
-<strong>Reading:</strong> McElreath Chapter 13-14</p>
+<p><strong>Lecture:</strong> Gaussian Proces Models and Rethinking Alternatives<br />
+<strong>Reading:</strong> McElreath Chapter 14, <a href="http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf">Roberts et al. 2012</a></p>
 </div>
 <div id="week-14." class="section level3">
 <h3>Week 14.</h3>
