adding prior choice wiki

--- a/schedule.html
+++ b/schedule.html
@@ -310,11 +310,13 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-14." class="section level3">
 <h3>Week 14.</h3>
-<p><strong>Lecture:</strong> Open Lab</p>
+<p><strong>Lecture:</strong> Open Lab<br />
+<strong>Reading:</strong> <a href="https://github.com/stan-dev/stan/wiki/Prior-Choice-Recommendations">Prior Choice Wiki</a></p>
 </div>
 <div id="week-15." class="section level3">
 <h3>Week 15.</h3>
-<p><strong>Lecture:</strong> Final Presentations</p>
+<p><strong>Lecture:</strong> Final Presentations, May 11<br />
+<strong>Assignments:</strong> Final Paper due, May 18</p>
 </div>
 
 
