added final cocumentation

--- a/texts.html
+++ b/texts.html
@@ -185,22 +185,19 @@ $(document).ready(function () {
   <a href="schedule.html">Schedule</a>
 </li>
 <li>
+  <a href="final.html">Final</a>
+</li>
+<li>
   <a href="error.html">R Errors</a>
 </li>
 <li>
   <a href="texts.html">Texts</a>
 </li>
 <li>
-  <a href="final.html">Final Project</a>
+  <a href="syllabus/adv_data_analysis_syllabus_2016a.doc">Syllabus</a>
 </li>
 <li>
-  <a href="extra.html">Extra Credit</a>
-</li>
-<li>
-  <a href="biol607_syllabus_2016.doc">Syllabus</a>
-</li>
-<li>
-  <a href="resources.html">Resources</a>
+  <a href="http://biol607.github.io/resources.html">Resources</a>
 </li>
 <li>
   <a href="http://byrneslab.net/resources/boston-area-data-science-groups/">Local Meetups</a>
