--- a/error.html
+++ b/error.html
@@ -185,6 +185,9 @@ $(document).ready(function () {
   <a href="schedule.html">Schedule</a>
 </li>
 <li>
+  <a href="final.html">Final</a>
+</li>
+<li>
   <a href="error.html">R Errors</a>
 </li>
 <li>
