--- a/schedule.html
+++ b/schedule.html
@@ -308,7 +308,8 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
-<p><strong>Lecture:</strong> Gaussian Proces Models and Rethinking Alternatives<br />
+<p><strong>Lecture:</strong> <a href="./lectures/24_gaussian_process.html">Gaussian Proces Models</a> and Rethinking Alternatives<br />
+<strong>Files:</strong> <a href="./data/gp/predict_gpl2.R">predicted GP script</a><br />
 <strong>Reading:</strong> McElreath Chapter 14, <a href="http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf">Roberts et al. 2012</a></p>
 </div>
 <div id="week-14." class="section level3">
