--- a/schedule.html
+++ b/schedule.html
@@ -309,6 +309,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
 <p><strong>Lecture:</strong> <a href="./lectures/24_gaussian_process.html">Gaussian Proces Models</a> and <a href="./lectures/25_beyond_rethinking.html">Rethinking Alternatives</a><br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-beyond" class="uri">https://etherpad.wikimedia.org/p/609-beyond</a><br />
 <strong>Files:</strong> <a href="./lectures/data/gp/predict_gpl2.R">predicted GP script</a><br />
 <strong>Reading:</strong> McElreath Chapter 14, <a href="http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf">Roberts et al. 2012</a><br />
 <strong>Further reading:</strong> <a href="http://mc-stan.org">stan</a>, <a href="http://www.r-inla.org/examples/volume-1">R-INLA examples</a>, <a href="https://cran.r-project.org/web/packages/rstanarm/vignettes/rstanarm.html">rstanarm intro</a></p>
