--- a/overview.html
+++ b/overview.html
@@ -90,6 +90,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -184,7 +187,7 @@ $(document).ready(function () {
   <a href="overview.html">Overview</a>
 </li>
 <li>
-  <a href="schedule.html">Schedule</a>
+  <a href="schedule_new.html">Schedule</a>
 </li>
 <li>
   <a href="final.html">Final</a>
