updating new schedule

--- a/schedule_new.html
+++ b/schedule_new.html
@@ -338,7 +338,9 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-15." class="section level3">
 <h3>Week 15.</h3>
 <p>5/13/2019<br />
-<strong><strong>Final Work Party Week!</strong></strong> <strong>Final Presentations:</strong> Friday May 17th <strong>Final Papers Due:</strong> May 21st</p>
+<strong><strong>Final Work Party Week!</strong></strong><br />
+<strong>Final Presentations:</strong> Friday May 17th<br />
+<strong>Final Papers Due:</strong> May 21st</p>
 </div>
 
 
