--- a/schedule_new.html
+++ b/schedule_new.html
@@ -230,7 +230,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
 <p>1/28/2019<br />
-<strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="./lectures/11_bayes_reintro.html">Re-Introduction to Bayesian Logic</a> and <a href="./lectures/12_posterior_sampling.html">Sampling</a><br />
+<strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced Data Analysis? And a little Bayes…</a>, <a href="./lectures/12_posterior_sampling.html">Sampling from your Posterior</a><br />
 <strong>Reading:</strong> McElreath Ch. 1-3<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-bayes-2019" class="uri">https://etherpad.wikimedia.org/p/609-bayes-2019</a></p>
 </div>
