--- a/schedule_new.html
+++ b/schedule_new.html
@@ -230,30 +230,29 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
 <p>1/28/2019<br />
-<strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_Bayesian_Intro.html">Re-Introduction to Bayes</a>, <a href="./lectures/12_posterior_sampling.html">Sampling from your Posterior</a><br />
-<strong>Reading:</strong> McElreath Ch. 1-3<br />
+<strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_Bayesian_Intro.html">Re-Introduction to Bayes</a>, <strong>Reading:</strong> McElreath Ch. 1-2<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-bayes-2019" class="uri">https://etherpad.wikimedia.org/p/609-bayes-2019</a></p>
 </div>
 <div id="week-2." class="section level3">
 <h3>Week 2.</h3>
 <p>2/4/2019<br />
-<strong>Lecture:</strong> <a href="./lectures/13_linear_models.html">Linear Bayesian Models</a>, <a href="./lectures/14_multiple_predictors.html">Multiple Predictor Variables (including Categoricals)</a><br />
-<strong>Reading:</strong> McElreath Chapter 4-5<br />
+<strong>Lecture:</strong> <a href="./lectures/03_posterior_sampling.html">Sampling from your Posterior</a>, <a href="./lectures/13_linear_models.html">Linear Bayesian Models</a>,<br />
+<strong>Reading:</strong> McElreath Chapter 3-4<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-linreg-2019" class="uri">https://etherpad.wikimedia.org/p/609-linreg-2019</a></p>
 </div>
 <div id="week-3." class="section level3">
 <h3>Week 3.</h3>
 <p>2/11/2019<br />
-<strong>Lecture:</strong> <a href="./lectures/15_mmi.html">Bayesian Multimodel Inference</a>, <a href="./lectures/16_interactions.html">Interaction Effects</a><br />
-<strong>Reading:</strong> McElreath Chapter 6-7<br />
+<strong>Lecture:</strong> <a href="./lectures/14_multiple_predictors.html">Multiple Predictor Variables (including Categoricals)</a>, <a href="./lectures/15_mmi.html">Bayesian Multimodel Inference</a><br />
+<strong>Reading:</strong> McElreath Chapter 5-6<br />
 <strong>Additional Reading:</strong> <a href="http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%20et%20al%202014.pdf">Aho et al 2013 Ecology</a>, <a href="http://link.springer.com/article/10.1007/s11222-013-9416-2">Gelman et al. 2013 on WAIC and LOO</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mmi-2019" class="uri">https://etherpad.wikimedia.org/p/609-mmi-2019</a></p>
 </div>
 <div id="week-4." class="section level3">
 <h3>Week 4.</h3>
 <p>2/18/2019<br />
-<strong>Lecture:</strong> <a href="./lectures/17_mcmc.html">Markov Chain Monte-Carlo Approaches</a><br />
-<strong>Reading:</strong> McElreath Chapter 8,9<br />
+<strong>Lecture:</strong> <a href="./lectures/16_interactions.html">Interaction Effects</a>, <a href="./lectures/17_mcmc.html">Markov Chain Monte-Carlo Approaches</a><br />
+<strong>Reading:</strong> McElreath Chapter 7-8<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mcmc_entropy-2019" class="uri">https://etherpad.wikimedia.org/p/609-mcmc_entropy-2019</a></p>
 </div>
 <div id="week-5." class="section level3">
