--- a/schedule_new.html
+++ b/schedule_new.html
@@ -230,13 +230,14 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
 <p>1/28/2019<br />
-<strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_Bayesian_Intro.html">Re-Introduction to Bayes</a>, <strong>Reading:</strong> McElreath Ch. 1-2<br />
+<strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced Data Analysis?</a>, <a href="lectures/02_Bayesian_Intro.html">Re-Introduction to Bayes</a><br />
+<strong>Reading:</strong> McElreath Ch. 1-2<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-bayes-2019" class="uri">https://etherpad.wikimedia.org/p/609-bayes-2019</a></p>
 </div>
 <div id="week-2." class="section level3">
 <h3>Week 2.</h3>
 <p>2/4/2019<br />
-<strong>Lecture:</strong> <a href="./lectures/03_posterior_sampling.html">Sampling from your Posterior</a>, <a href="./lectures/13_linear_models.html">Linear Bayesian Models</a>,<br />
+<strong>Lecture:</strong> <a href="./lectures/03_posterior_sampling.html">Sampling from your Posterior</a>, <a href="./lectures/04_linear_models.html">Linear Bayesian Models</a>,<br />
 <strong>Reading:</strong> McElreath Chapter 3-4<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-linreg-2019" class="uri">https://etherpad.wikimedia.org/p/609-linreg-2019</a></p>
 </div>
