adding hw and updating 4

--- a/schedule_new.html
+++ b/schedule_new.html
@@ -239,7 +239,8 @@ To see the code of a lecture, load the slides, then change the file extension in
 <p>2/4/2019<br />
 <strong>Lecture:</strong> <a href="./lectures/03_posterior_sampling.html">Sampling from your Posterior</a>, <a href="./lectures/04_linear_models.html">Linear Bayesian Models</a>,<br />
 <strong>Reading:</strong> McElreath Chapter 3-4<br />
-<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-linreg-2019" class="uri">https://etherpad.wikimedia.org/p/609-linreg-2019</a></p>
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-linreg-2019" class="uri">https://etherpad.wikimedia.org/p/609-linreg-2019</a><br />
+<strong>Homework:</strong> <a href="homework/hw1_sampling_linear.html">HW1</a></p>
 </div>
 <div id="week-3." class="section level3">
 <h3>Week 3.</h3>
