--- a/schedule_new.html
+++ b/schedule_new.html
@@ -268,9 +268,10 @@ To see the code of a lecture, load the slides, then change the file extension in
 </div>
 <div id="week-6." class="section level3">
 <h3>Week 6.</h3>
-<p>3/4/2019<br />
-<strong>Lecture:</strong> <a href="./lectures/21_overdisp.html">Overdispersed Models</a>, <a href="./lectures/20_zinfl.html">Zero Inflated Models</a><br />
-<strong>Reading:</strong> McElreath Chapter 11, <a href="http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg%20binomial.pdf">ver Hoef and Boveng 2007 on overdispersion</a><br />
+<p>3/11/2019<br />
+<strong>Lecture:</strong> <a href="./lectures/12_overdisp.html">Overdispersed Models</a>, <a href="./lectures/20_zinfl.html">Zero Inflated Models</a><br />
+<strong>Reading:</strong> McElreath Chapter 11, <a href="http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg%20binomial.pdf">ver Hoef and Boveng 2007 on overdispersion</a>, <a href="http://byrneslab.net/classes/biol609/Rose_et_al_2006_zero_inflation.pdf">Roset et al 2006 on Overdispersion</a><br />
+<strong>Additional Reading:</strong> <a href="http://byrneslab.net/classes/biol609/zuur_zero_inflation.pdf">Zuur chapter on zero inflation</a><br />
 <strong>Files:</strong> <a href="./lectures/data/20/fishing_duration.csv">Fishing Duration CSV</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-zig_zag-2019" class="uri">https://etherpad.wikimedia.org/p/609-zig_zag-2019</a></p>
 </div>
