updating bell paper

--- a/schedule_new.html
+++ b/schedule_new.html
@@ -398,8 +398,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 <p>4/1/2019<br />
 <strong>Lecture:</strong> <a href="./lectures/23c_brms_prediction.html">brms and Prediction with Mixed Models</a>, Group-Mean Centering and Other Model Structures<br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-mixed_bayesian-2019" class="uri">https://etherpad.wikimedia.org/p/609-mixed_bayesian-2019</a><br />
-<strong>Reading:</strong> <a href="./Readings/McNeish_Kelley_PsychMethods_2019.pdf">McNeish and Kelly 2018</a>, <a href="http://rpubs.com/jebyrnes/causal_mods">Causal Model Structures and Random Effects</a>, <a href="./Readings/2018-11-02_wim_poe_clustered_slides.pdf">Poe Lecture Slides</a>, <a href="./Readings/Bell2018_Article_UnderstandingAndMisunderstandi.pdf">Bell et al. 2018a</a><br />
-<strong>Additional Reading:</strong> <a href="./Bell%202018%20Qual%20Quant.pdf">Bell et al 2018b</a></p>
+<strong>Reading:</strong> <a href="./Readings/McNeish_Kelley_PsychMethods_2019.pdf">McNeish and Kelly 2018</a>, <a href="http://rpubs.com/jebyrnes/causal_mods">Causal Model Structures and Random Effects</a>, <a href="./Readings/2018-11-02_wim_poe_clustered_slides.pdf">Poe Lecture Slides</a>, <a href="./Readings/Bell2018_Article_UnderstandingAndMisunderstandi.pdf">Bell et al. 2018a</a>, <a href="./Bell_2018_Qual_Quant.pdf">Bell et al 2018b</a></p>
 </div>
 <div id="week-10." class="section level3">
 <h3>Week 10.</h3>
