--- a/schedule_new.html
+++ b/schedule_new.html
@@ -417,7 +417,8 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-11." class="section level3">
 <h3>Week 11.</h3>
 <p>4/15/2019<br />
-<strong>Lecture:</strong> <a href="./lectures/24_gaussian_process.html">Gaussian Proces Models</a>, <a href="./lectures/22_gams.html">Generalized Additive Models (GAMs)</a> <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-beyond-2019" class="uri">https://etherpad.wikimedia.org/p/609-beyond-2019</a><br />
+<strong>Lecture:</strong> <a href="./lectures/24_gaussian_process.html">Gaussian Proces Models</a>, <a href="./lectures/22_gams.html">Generalized Additive Models (GAMs)</a><br />
+<strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-beyond-2019" class="uri">https://etherpad.wikimedia.org/p/609-beyond-2019</a><br />
 <strong>Files:</strong> <a href="./lectures/data/gp/predict_gpl2.R">predicted GP script</a><br />
 <strong>Reading:</strong> <a href="./Readings/verHoef_spatial_autocorrelation.pdf">Spatial autoregressive models for statistical inference from ecological data</a>, McElreath Chapter 14, <a href="http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf">Roberts et al. 2012</a>, <a href="http://environmentalcomputing.net/intro-to-gams/">GAMs: an Introduction</a>, <a href="https://m-clark.github.io/generalized-additive-models/">Michael Clark’s GAM Introduction</a>, <a href="./Readings/Pedersen-2019-Hierarchical%20Generalized%20Additive%20Models%20in%20ecology.pdf">Hierarchical Generalized Additive Models in ecology: an introduction with mgcv</a><br />
 <strong>Further Readings:</strong> <a href="./Readings/DormannEcography30_57164.pdf">Methods to account for spatial autocorrelation in the analysis of species distributional data: a review</a></p>
@@ -434,15 +435,18 @@ To see the code of a lecture, load the slides, then change the file extension in
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
 <p>4/29/2019<br />
-<strong>Lecture:</strong> Causal Modeling</p>
+<strong>Lecture:</strong> Causal Modeling<br />
+<strong>Readings:</strong> <a href="./Readings/Hernán_and_Healey_2019.pdf">A Second Change to Get Causal Inference Right</a>, <a href="./Readings/Larsen_et_al_2019.pdf">Causal analysis in control impact studies</a>, <a href="Pearl_2010_causal_inference.pdf">Pearl 2010</a><br />
+<strong>Additional Reading:</strong> <a href="https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/">Causal Inference</a></p>
 </div>
 <div id="week-14." class="section level3">
 <h3>Week 14.</h3>
 <p>5/6/2019<br />
-<strong>Lecture:</strong> <a href="https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw">Intro to Structural Equation Models</a>, <a href="https://1drv.ms/f/s!AvOIsObbweOroNIitg7KpsLhgffJrw">Implementing Piecewise SEM</a><br />
+<!-- __Lecture:__ [Intro to Structural Equation Models](https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw), [Implementing Piecewise SEM](https://1drv.ms/f/s!AvOIsObbweOroNIitg7KpsLhgffJrw)  --> <strong>Lecture:</strong> <a href="https://www.dropbox.com/s/l7z6sbs16jk2y0s/23_SEM_Intro.pptx?dl=0">Intro to Structural Equation Models</a>, <a href="https://www.dropbox.com/s/j59oodlmcx53tiw/24_Estimation_in_SEM.pptx?dl=0">SEM Implementation</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-sem-2019" class="uri">https://etherpad.wikimedia.org/p/609-sem-2019</a><br />
-<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Grace_et_al-2012-Ecosphere.pdf">Grace et al 2012 Ecosphere</a><br />
-<strong>R packages:</strong> piecewiseSEM</p>
+<strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Grace_et_al-2012-Ecosphere.pdf">Grace et al 2012 Ecosphere</a>, <a href="./Readings/Lefcheck_2016_SEM.pdf">Lefcheck 2016</a><br />
+<strong>Additional Reading:</strong> <a href="https://jslefche.github.io/sem_book/">Notes from Jon Lefcheck</a><br />
+<strong>Helpful Websites:</strong> <a href="http://jslefche.github.io/piecewiseSEM/">piecewiseSEM</a>, <a href="http://lavaan.ugent.be/">lavaan</a>, <a href="https://www.usgs.gov/centers/wetland-and-aquatic-research-center/science/quantitative-analysis-using-structural-equation">Jim Grace’s Tutorials</a></p>
 </div>
 <div id="week-15." class="section level3">
 <h3>Week 15.</h3>
